<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    app:barrierMargin="@dimen/_5dp">

    <TextView
        android:id="@+id/tv_heightft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/height"
        android:textColor="#000"
        android:textSize="@dimen/_48ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_heightftvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/height"
        android:textColor="#000"
        android:textSize="70.00sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heightft" />


    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/warning_low_altitude"
        android:textColor="#EF3A78"
        android:textSize="@dimen/_28ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heightftvalue" />


    <TextView
        android:id="@+id/tv_heightbatt"
        android:layout_width="61dp"
        android:layout_height="97dp"
        android:layout_marginStart="44dp"
        android:text="%"
        android:textColor="#000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="628dp" />

    <LinearLayout
        android:id="@+id/ll_btn_activeStandby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heightftvalue">

        <Button
            android:id="@+id/btn_activeMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_active_standby"
            android:text="@string/active_mode"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_standBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_active_standby"
            android:text="@string/standby_mode"
            android:textAllCaps="false" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_beep_mute_unmute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_btn_activeStandby">

        <Button
            android:id="@+id/btn_beep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_beep_mute_unmute"
            android:text="@string/Test"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_beep_mute_unmute"
            android:text="@string/mute"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_unMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_beep_mute_unmute"
            android:text="@string/unmute"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="108dp"
        android:layout_height="21dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="48dp"
        android:text="  Stadia Battery"
        app:layout_constraintBottom_toTopOf="@+id/ll_btn_activeStandby"
        app:layout_constraintStart_toEndOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:progressDrawable="@drawable/battery_progressbar"
        app:layout_constraintStart_toStartOf="@+id/ll_btn_activeStandby"
        app:layout_constraintTop_toTopOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>