<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- <TextView
         android:id="@+id/tv_stadia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="STADIA"
         android:textColor="#000"
         android:textSize="80sp"
         android:textStyle="bold"

         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/tv_notconnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/not_connected"
        android:textColor="#F80A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:id="@+id/start_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_notconnected"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notconnected"
        android:src="@drawable/bluetooth" />

    <ImageView
        android:id="@+id/iv_stadia_logo"
        android:layout_width="0dp"
        android:layout_height="@dimen/_198sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:src="@drawable/stadialogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notconnected" />


    <ImageView
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:id="@+id/tv_skeeter_enterprises"
        android:layout_width="0dp"
        android:layout_height="@dimen/_98sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/emterpriselogo"
        app:layout_constraintBottom_toTopOf="@+id/btn_runStadia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_runStadia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_btn_run"
        android:text="@string/run_stadia"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_setUpStadia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_setUpStadia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_btn_setupstaida"
        android:text="@string/setup_stadia"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--<LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_runStadia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_run"
            android:text="RUN STADIA"
            android:textColor="#000" />


        <Button
            android:id="@+id/btn_setUpStadia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_setupstaida"
            android:text="SETUP STADIA"
            android:textColor="#fff" />
    </LinearLayout>
-->

</androidx.constraintlayout.widget.ConstraintLayout>